fix: info cards on mobile

--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -9,6 +9,7 @@
 .paragraph--dontmissTitle {
 	font-family: Fabriga;
 	font-weight: 600;
+	text-align: center;
 }
 .link--dontmissTitle {
 	text-decoration: none;
